<?xml version="1.0"?>
<package format="2">
  <name>ranger_base</name>
  <version>0.1.0</version>
  <description>ROS driver for ranger series robot bases</description>

  <maintainer email="matthew.ong@westonrobot.com">Matthew Ong</maintainer>
  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>
  <maintainer email="zhe.wang@agilex.ai">WangZhe</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ranger_base</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>controller_manager</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ranger_msgs</build_depend>
  <build_depend>ugv_sdk</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>boost</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ranger_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ranger_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>ugv_sdk</build_export_depend>
  <build_export_depend>boost</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
